# ROS_Cpp

./: add_two_ints_server.cpp  client.cpp  talker.cpp
LIDAR_Obstacle_Detection/review_ws-main/: Dockerfile  README.md  command.txt  docker_build.sh  docker_up.sh  gui-docker
LIDAR_Obstacle_Detection/review_ws-main/src/gazebo_datagen/: CMakeLists.txt  package.xml
LIDAR_Obstacle_Detection/review_ws-main/src/gazebo_datagen/bags/: scan.bag
LIDAR_Obstacle_Detection/review_ws-main/src/gazebo_datagen/launch/: gazebo.launch
LIDAR_Obstacle_Detection/review_ws-main/src/gazebo_datagen/urdf/: lidar.urdf.xacro
LIDAR_Obstacle_Detection/review_ws-main/src/gazebo_datagen/worlds/: datagen.world
LIDAR_Obstacle_Detection/review_ws-main/src/obstacle_detection/: CMakeLists.txt  package.xml
LIDAR_Obstacle_Detection/review_ws-main/src/obstacle_detection/launch/: obstacle_detection.launch
LIDAR_Obstacle_Detection/review_ws-main/src/obstacle_detection/rviz/: obstacle_detection.rviz
LIDAR_Obstacle_Detection/review_ws-main/src/obstacle_detection/src/: detector_node.cpp
ros_prac/devel/: .catkin  .rosinstall
ros_prac/devel/include/ros_cpp/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
ros_prac/devel/lib/pkgconfig/: ros_cpp.pc
ros_prac/devel/lib/python3/dist-packages/ros_cpp/msg/: _Num.py
ros_prac/devel/lib/python3/dist-packages/ros_cpp/srv/: _AddTwoInts.py
ros_prac/devel/lib/ros_cpp/: add_two_ints_client  add_two_ints_server  lidar_scan  listener  talker
ros_prac/devel/share/common-lisp/ros/ros_cpp/msg/: Num.lisp  _package.lisp  _package_Num.lisp  ros_cpp-msg.asd
ros_prac/devel/share/common-lisp/ros/ros_cpp/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  ros_cpp-srv.asd
ros_prac/devel/share/gennodejs/ros/ros_cpp/msg/: Num.js
ros_prac/devel/share/gennodejs/ros/ros_cpp/srv/: AddTwoInts.js
ros_prac/devel/share/ros_cpp/cmake/: ros_cpp-msg-extras.cmake  ros_cpp-msg-paths.cmake  ros_cppConfig.cmake
ros_prac/devel/share/roseus/ros/ros_cpp/: manifest.l
ros_prac/devel/share/roseus/ros/ros_cpp/msg/: Num.l
ros_prac/devel/share/roseus/ros/ros_cpp/srv/: AddTwoInts.l
ros_prac/src/ros_cpp/: CMakeLists.txt
ros_prac/src/ros_cpp/src/: lidar_scan.cpp  listener.cpp
