<?xml version="1.0"?>
<package format="2">
  <name>gazebo_datagen</name>
  <version>0.0.0</version>
  <description>The gazebo_datagen package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
